// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the (Activity) EntryDetails component does not render the delete button on the first element 1`] = `
<div
  className="activity--body activity--body__first"
  id="activity-activity 1 key"
>
  <Review
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
      </div>
    }
    editText="Edit"
    heading="Activity 1: activity 1 name (money pit)"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with the modal closed 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Remove
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: activity name (money pit)"
    headingLevel={4}
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with the modal closed 2`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Remove
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: activity name (money pit)"
    headingLevel={4}
  />
  <ActivityDialog
    activityIndex={2}
    closeModal={[Function]}
    title="Activity 3: activity name (money pit)"
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with the modal closed 3`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Remove
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: activity name (money pit)"
    headingLevel={4}
  />
</div>
`;
